<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"

    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/backmood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4.5"
            android:background="@color/bluelight"
            android:elevation="0dp"
            android:visibility="visible">

            <SeekBar
                android:id="@+id/moodbar"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:max="4"
                android:progress="2"
                android:splitTrack="false"
                app:layout_constraintBottom_toTopOf="@+id/button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/faceimg"
                android:progressDrawable="@drawable/cseekbar"
                android:thumb="@drawable/cthumb"
                />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:elevation="15dp"
                android:fontFamily="@font/inter_bold"
                android:text="How are you?"
                android:textColor="#FFFFFF"
                android:textSize="48sp"
                app:layout_constraintEnd_toEndOf="@+id/faceimg"
                app:layout_constraintStart_toStartOf="@+id/faceimg"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/faceimg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-16dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/moodbar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:srcCompat="@drawable/component_3" />

            <Button
                android:id="@+id/button"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/inter_bold"
                android:text="I feel okay"
                android:textAllCaps="false"
                android:textColor="@color/bluelight"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/seekbarview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:visibility="gone">


            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/materialbg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/bluelight"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_medium"
                android:text="@string/what_are_you_feeling"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialbg">

                <SeekBar
                    android:id="@+id/determbar"
                    android:layout_width="0dp"
                    android:layout_height="33dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:max="4"
                    android:progress="2"
                    android:progressTint="@color/lightRed"
                    android:thumbTint="@color/red"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/inter"
                    android:text="@string/determination"
                    android:textColor="@color/red"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/concenbar" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/inter"
                    android:text="@string/self_esteem"
                    android:textColor="@color/green"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/balancbar" />

                <SeekBar
                    android:id="@+id/selfbar"
                    android:layout_width="0dp"
                    android:layout_height="33dp"
                    android:layout_marginTop="8dp"
                    android:max="4"
                    android:progress="2"
                    android:progressTint="@color/greenlight"
                    android:thumbTint="@color/green"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/inter"
                    android:text="@string/balance"
                    android:textColor="@color/blue"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/determbar" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/inter"
                    android:text="@string/concentration"
                    android:textColor="@color/purple"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <SeekBar
                    android:id="@+id/balancbar"
                    android:layout_width="0dp"
                    android:layout_height="33dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:max="4"
                    android:progress="2"
                    android:progressTint="@color/bluelight"
                    android:thumbTint="@color/blue"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" />

                <SeekBar
                    android:id="@+id/concenbar"
                    android:layout_width="0dp"
                    android:layout_height="33dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:max="4"
                    android:progress="2"
                    android:progressTint="@color/purplelight"
                    android:thumbTint="@color/purple"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />

                <Button
                    android:id="@+id/submitbtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="@color/bluelight"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/submit"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:textSize="26sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/selfbar" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/statsbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_weight="2"
            android:background="@color/bluelight"
            android:fontFamily="@font/inter_medium"
            android:text="@string/summary"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:visibility="visible"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/diarybtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="4"
            android:background="@color/bluelight"
            android:fontFamily="@font/inter_bold"
            android:text="@string/diary"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="34sp"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/statementsbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="4"
            android:background="@color/bluelight"
            android:fontFamily="@font/inter_bold"
            android:text="@string/statements"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="34sp"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/groundingbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="4"
            android:background="@color/bluelight"
            android:fontFamily="@font/inter_bold"
            android:text="@string/grounding"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="34sp"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/resourcesbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="4"
            android:background="@color/bluelight"
            android:fontFamily="@font/inter_bold"
            android:text="@string/resources"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="34sp"
            app:backgroundTint="@null" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>